fix(css): 2150 gdc-app menu layout issue in IE
Closes #2150

--- a/app/styles/home.less
+++ b/app/styles/home.less
@@ -33,7 +33,6 @@
     justify-content: space-between;
 
     .menu-column {
-      display: flex;
       flex-wrap: wrap;
       flex-direction: column;
     }
@@ -384,7 +383,7 @@
         display: inline-block;
         position: relative;
         color: #777;
-        
+
         a {
           display: block;
           color: inherit;
@@ -420,7 +419,7 @@
         flex: 1;
         text-transform: uppercase;
         border-right: solid 2px #d3e5e7;
-        
+
         .stats-block-body {
           font-size: 3.5rem;
           font-weight: 300;
@@ -438,7 +437,7 @@
 
   // Layout: Row 3
   .table-row-container {
-    
+
     .info-table {
       padding: 0 .25rem;
       a {
@@ -458,7 +457,7 @@
       min-height: 11.4rem;
       line-height: 2rem;
     }
-    
+
     .gdc-apps {
       td {
         background-color: #fff;
